Revert "Bug 2028160 - Fix whitespace below searchbar obscuring back button focus indicator r=hjones,desktop-theme-reviewers" for causing failures at browser_ignore_invalid_capability.js.
This reverts commit 4a0f43557fde801313957d3ab46edb5879dcc9a9.

--- a/browser/themes/shared/preferences/preferences.css
+++ b/browser/themes/shared/preferences/preferences.css
@@ -62,9 +62,6 @@
 }
 
 #search-container {
-  --search-container-padding: var(--space-small);
-  --search-container-margin: calc(var(--focus-outline-width) + var(--focus-outline-offset));
-
   position: sticky;
   top: 0;
   /* Bug 2026689 Negative margin is used here to hide the borders of setting-controls on scroll
@@ -77,11 +74,8 @@
   z-index: 2;
   background-color: var(--background-color-canvas);
   padding-top: 40px;
-  padding-bottom: var(--search-container-padding);
+  padding-bottom: var(--space-large);
   padding-inline: var(--focus-outline-offset);
-  /* Ensure focus indicators on elements below the search container
-     aren't obscured. */
-  margin-bottom: var(--search-container-margin);
 }
 
 #searchInput {
@@ -101,7 +95,7 @@
   margin-top: 32px;
   padding-top: 0;
   padding-inline-end: 42px;
-  scroll-padding-top: calc(40px + var(--search-container-padding) + var(--search-container-margin) + 40px);
+  scroll-padding-top: calc(40px + var(--space-large) + 40px);
 
   @media (max-width: 830px) {
     padding-inline: var(--space-medium);
